@@ -1695,17 +1695,6 @@
       </component>
     </version>
   </module>
-  <module name="metatheme">
-    <version release="gnome-2.4">
-      <component name="metatheme" dir="metatheme" group="extras">
-        <podir dir="po"/>
-        <potname name="metatheme.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="mlview">
     <version release="gnome-2.4">
       <component name="mlview" dir="mlview" group="extras">
