@@ -1,3 +1,8 @@
+2003-08-20  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Remove metatheme, its functionality has
+	already been superseded by newer control center.
+
 2003-08-17  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Fix gal,gtkhtml,drgeo pot file name.
